// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`если запрос неудачный то после покажет нотификацию и вернет стейт обратно 1`] = `
Array [
  Object {
    "payload": Object {
      "isOn": true,
      "service": "all_sale_toplist",
    },
    "type": "OFFER_TOGGLE_SERVICE_AUTO_PROLONGATION",
  },
  Object {
    "payload": Object {
      "isOn": false,
      "service": "all_sale_toplist",
    },
    "type": "OFFER_TOGGLE_SERVICE_AUTO_PROLONGATION",
  },
]
`;

exports[`оптимистично проставит флаг недожидаюсь ответа бэка 1`] = `
Array [
  Object {
    "payload": Object {
      "isOn": true,
      "service": "all_sale_toplist",
    },
    "type": "OFFER_TOGGLE_SERVICE_AUTO_PROLONGATION",
  },
]
`;
